# krustlet

./: Cargo.toml  depl-yuck.yaml  depl.yaml  pod-yuck.yaml  pod.yaml  test-vmi-yuck.yaml  test-vmi.yaml
crates/aws-provider/: Cargo.toml
crates/aws-provider/src/: lib.rs
crates/aws-provider/src/states/pod/: fake_running.rs  mod.rs  registered.rs  terminated.rs
crates/kubelet/: Cargo.toml
crates/kubelet/src/: config.rs  kubelet.rs
crates/kubelet/src/bootstrapping/: mod.rs
crates/kubelet/src/container/: mod.rs
crates/kubelet/src/fs_watch/: mod.rs
crates/kubelet/src/node/: mod.rs
crates/kubelet/src/plugin_watcher/: mod.rs
crates/kubelet/src/pod/: mod.rs
crates/kubelet/src/resources/device_plugin_manager/: node_patcher.rs
crates/kubelet/src/volume/: configmap.rs  downward.rs  persistentvolumeclaim.rs  projected.rs  secret.rs
crates/wasi-provider/: Cargo.toml
src/: krustlet-aws.rs
tests/podsmiter/src/: main.rs
