[package]
authors = [
  "Matt Butcher <matt.butcher@microsoft.com>",
  "Matthew Fisher <matt.fisher@microsoft.com>",
  "Radu Matei <radu.matei@microsoft.com>",
  "Taylor Thomas <taylor.thomas@microsoft.com>",
  "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
  "Brian Hardock <Brian.Hardock@microsoft.com>",
  "Ryan Levick <rylevick@microsoft.com>",
  "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
edition = "2021"
license = "Apache-2.0"
name = "aws-provider"
publish = false
version = "1.0.0-alpha.1"

[features]
default = ["native-tls"]
native-tls = ["kube/openssl-tls", "kubelet/kube-native-tls", "krator/kube-native-tls"]
rustls-tls = ["kube/rustls-tls", "kubelet/rustls-tls", "krator/rustls-tls"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backtrace = "0.3"
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
krator = {default-features = false, git = "https://github.com/nertpinx/krator.git", branch = "update"}
kube = {version = "0.88.1", default-features = false}
kubelet = {path = "../kubelet", version = "1.0.0-alpha.1", default-features = false, features = ["derive"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.1"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread", "time", "fs", "io-util", "sync"]}
tracing = {version = "0.1", features = ['log']}

k8s-openapi = {version = "0.21.1", default-features = false, features = ["v1_24"]}
rand = "0.8.5"
schemars = "0.8.16"


[dev-dependencies]
k8s-openapi = {version = "0.21.1", default-features = false, features = ["v1_24"]}
schemars = "0.8.16"
oci-distribution = "0.8"
